Imager release history.  Older releases can be found in Changes.old

 - addtag(): store non-"int" numbers as strings
   https://github.com/tonycoz/imager/issues/559

 - API: i_tags_get_int() - now fails if the value is stored as a string
   and is out of range for an int.

Imager 1.029 - 06 Oct 2025
============

 - minor documentation updates

 - added a security policy
   https://github.com/tonycoz/imager/issues/555

 - TIFF: compatibility with libtiff 4.7.1

Imager 1.028 - 16 Jun 2025
============

No changes since the 1.027_001 test release.

Imager 1.027_001 - 08 Jun 2025
================

Test release:

 - documentation fixes, thanks mauke
   https://github.com/tonycoz/imager/pull/547
   https://github.com/tonycoz/imager/pull/552

 - fix a stupid inefficiency in looking up filters in the filter()
   method
   https://github.com/tonycoz/imager/pull/546

 - fix incomplete implementation of multi-library bundles in
   Devel::CheckLib

 - don't use Devel::CheckLib for probes, leaving Devel::CheckLib in
   for now so the submodules can still work with older Imager.

Imager 1.027 - 02 Mar 2025
============

 - reinstate multi-library probes to bundled Devel::CheckLib
   https://github.com/tonycoz/imager/issues/543

Imager 1.026 - 08 Feb 2025
============

1.026 was withdrawn from CPAN due to incompatibility with downstream
modules.

 - change t/200-file/400-basic.t to only test formats that were found
   during configuration.
 - remove the specific unknown file format tests since they could load
   a non-functional (due to library changes) format handler.
   https://github.com/tonycoz/imager/issues/536

 - update bundled Devel::CheckLib to current version on CPAN, with some
   extra changes:
     - add support for a prologue parameter to insert code before main()
       https://github.com/mattn/p5-Devel-CheckLib/pull/41
     - add cleanup code for the *.dSYM/ directories left behind on
       darwin
       https://github.com/mattn/p5-Devel-CheckLib/pull/42