@@ -1407,6 +1407,8 @@ sub tags {
   }
 }
 
+my $int_re = qr/^(?:0|-[1-9][0-9]*|[1-9][0-9]*)$/;
+
 sub addtag {
   my $self = shift;
   my %opts = @_;
@@ -1417,7 +1419,7 @@ sub addtag {
   my $value = $opts{value};
   if ($opts{name}) {
     if (defined $value) {
-      if ($value =~ /-?^\d+$/ && $value >= INT_MIN && $value <= INT_MAX) {
+      if ($value =~ $int_re && $value >= INT_MIN && $value <= INT_MAX) {
         # add as an int
         return i_tags_addn($self->{IMG}, $opts{name}, 0, $value);
       }
@@ -1438,7 +1440,7 @@ sub addtag {
     warnings::warnif("Imager::tagcodes", "addtag: code parameter is deprecated")
         if $] >= 5.014;
     if (defined $value) {
-      if ($value =~ /^-\d+$/ && $value >= INT_MIN && $value <= INT_MAX) {
+      if ($value =~ $int_re && $value >= INT_MIN && $value <= INT_MAX) {
         # add as a number
         return i_tags_addn($self->{IMG}, $opts{code}, 0, $opts{value});
       }
